# adaptagrams

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  Makefile.am  README  README.md  assertions.h  configure.in  connectionpin.cpp  connectionpin.h  connector.cpp  connector.h  connend.cpp  connend.h  debug.h  geometry.cpp  geometry.h  geomtypes.cpp  geomtypes.h  graph.cpp  graph.h  index.html  junction.cpp  junction.h  libavoid.h  makepath.cpp  makepath.h  obstacle.cpp  obstacle.h  orthogonal.cpp  orthogonal.h  polyutil.cpp  polyutil.h  region.cpp  region.h  router.cpp  router.h  shape.cpp  (+14 more)
cola/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  INSTALL  Makefile-swig-java  Makefile-swig-python  Makefile.am  README  adaptagrams.i  autogen.sh  buildJavaVersionForMac.sh  buildPythonSWIG.sh  buildSWIGVersionForMac.sh  cola.i  configure.ac  configure.in  doxygen.conf  std_list.i  swig-python-setup.py  swig-python3-setup.py  swigmake
cola/libavoid/: CMakeLists.txt  Doxyfile  LICENSE.LGPL  Makefile.am  README  actioninfo.cpp  actioninfo.h  assertions.h  cluster.cpp  connectionpin.cpp  connectionpin.h  connector.cpp  connector.h  connend.cpp  connend.h  debug.h  debughandler.h  dllexport.h  geometry.cpp  geometry.h  geomtypes.cpp  geomtypes.h  graph.cpp  graph.h  hyperedge.cpp  hyperedge.h  hyperedgeimprover.cpp  hyperedgeimprover.h  hyperedgetree.cpp  hyperedgetree.h  junction.cpp  junction.h  libavoid.h  libavoid.pc.in  libavoid.sln  libavoid.vcxproj  makepath.cpp  makepath.h  mtst.cpp  mtst.h  (+24 more)
cola/libcola/: CMakeLists.txt  Makefile.am  box.cpp  box.h  cc_clustercontainmentconstraints.cpp  cc_clustercontainmentconstraints.h  cc_nonoverlapconstraints.cpp  cc_nonoverlapconstraints.h  cluster.cpp  cluster.h  cola.cpp  cola.h  cola_log.cpp  cola_log.h  colafd.cpp  commondefs.h  compound_constraints.cpp  compound_constraints.h  config.h  conjugate_gradient.c  conjugate_gradient.cpp  conjugate_gradient.h  connected_components.cpp  connected_components.h  convex_hull.cpp  convex_hull.h  cycle_detector.cpp  cycle_detector.h  exceptions.h  gradient_projection.cpp  gradient_projection.h  gv_conjugate_gradient.c  libcola.pc.in  max_acyclic_subgraph.cpp  max_acyclic_subgraph.h  output_svg.cpp  output_svg.h  pseudorandom.cpp  pseudorandom.h  shapepair.cpp  (+10 more)
cola/libdialect/: CMakeLists.txt  Makefile.am  aca.cpp  aca.h  bendseqlookup.cpp  chains.cpp  chains.h  commontypes.h  constraints.cpp  constraints.h  edges.cpp  expansion.cpp  expansion.h  faces.cpp  faces.h  gen_bend_seq_lookup.py  gen_qa_lookup.py  graphs.cpp  graphs.h  hola.cpp  hola.h  io.cpp  io.h  libdialect.h  libdialect.pc.in  logging.cpp  logging.h  nearalign.cpp  nearalign.h  nexes.cpp  nodeconfig.cpp  nodeconfig.h  nodes.cpp  opts.h  ortho.cpp  ortho.h  peeling.cpp  peeling.h  planarise.cpp  planarise.h  (+11 more)
cola/libproject/: Makefile  Makefile.am  feasible_projection_algorithm.cpp  feasible_projection_algorithm.h  log.h  project.cpp  project.h  project_log.h  util.cpp  util.h  variable.h
cola/libtopology/: CMakeLists.txt  Makefile.am  cola_topology_addon.cpp  cola_topology_addon.h  compute_forces.cpp  gradient_projection.cpp  libtopology.pc.in  log.h  orthogonal_topology.cpp  orthogonal_topology.h  resize.cpp  steepest_descent.cpp  topology_constraints.cpp  topology_constraints.h  topology_constraints_constructor.cpp  topology_graph.cpp  topology_graph.h  topology_log.h  topologyconstraint.nb  util.h
cola/libvpsc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  PairingHeap.h  assertions.h  block.cpp  block.h  blocks.cpp  blocks.h  cbuffer.cpp  cbuffer.h  constraint.cpp  constraint.h  csolve_VPSC.cpp  csolve_VPSC.h  exceptions.h  isnan.h  libvpsc.pc.in  linesegment.h  mosek_quad_solve.c  mosek_quad_solve.h  pairing_heap.h  rectangle.cpp  rectangle.h  remove_rectangle_overlap.cpp  solve_VPSC.cpp  solve_VPSC.h  variable.cpp  variable.h
cola/tests/: Makefile.am  constrained.cpp  graphlayout.cpp  graphlayouttest.cpp  graphlayouttest.h  shortest_paths.cpp  straightener.cpp  test_cg.cpp  unconstrained.cpp
libcola/: Makefile.am  cola.cpp  cola.h  conjugate_gradient.c  conjugate_gradient.cpp  conjugate_gradient.h  connected_components.cpp  convex_hull.h  cycle_detector.cpp  cycle_detector.h  gradient_projection.cpp  gradient_projection.h  gv_conjugate_gradient.c  gv_conjugate_gradient.h  max_acyclic_subgraph.h  output_svg.cpp  output_svg.h  shortest_paths.cpp  shortest_paths.h  straightener.cpp  straightener.h
libcola/njh-cg/: conjugate_gradient.h
libcola/tests/: Makefile.am  connected_components.cpp  constrained.cpp  containment.cpp  containment2.cpp  cycle_detector.cpp  graphlayouttest.cpp  graphlayouttest.h  large_graph.cpp  makemovie.sh  max_acyclic_subgraph.cpp  shortest_paths.cpp  sparse_matrix.cpp  straightener.cpp  test_cg.cpp  unconstrained.cpp  view_cd_output.sh  view_mas_output.sh
solve_VPSC/: .Makefile.am.swp  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  libtool  test_csolve_VPSC.c
solve_VPSC/libvpsc/: block.cpp  block.h  blocks.cpp  blocks.h  constraint.cpp  constraint.h  csolve_VPSC.cpp  csolve_VPSC.h  generate-constraints.cpp  generate-constraints.h  remove_rectangle_overlap.cpp  removeoverlap.cpp  solve_VPSC.cpp  solve_VPSC.h  variable.cpp  variable.h
solve_VPSC/removeoverlap/: Makefile.am  block.cpp  block.h  blocks.cpp  blocks.h  constraint.cpp  constraint.h  csolve_VPSC.cpp  csolve_VPSC.h  generate-constraints.cpp  remove_rectangle_overlap.cpp  solve_VPSC.cpp  solve_VPSC.h  variable.h
solve_VPSC/tests/: Makefile.am  block.cpp  (+5 more)
tests/: Makefile.am  activedelete.cpp  checkpoints01.cpp  complex.cpp  connectionpin01.cpp  connectionpin02.cpp  connectionpin03.cpp  constrained.cpp  containment.cpp  example.cpp  graphlayout.cpp  graphlayouttest.cpp  graphlayouttest.h  infinity.cpp  inline.cpp  inlineoverlap.cpp  inlineoverlap01.cpp  inlineoverlap05.cpp  latesetup.cpp  multiconnact.cpp  nudgeintobug.cpp  nudgeold.cpp  orderassertion.cpp  orthordering01.cpp  orthordering02.cpp  reallyslowrouting.cpp  slowrouting.cpp  straightener.cpp  test_cg.cpp  unconstrained.cpp
(+2997 files in other folders)
