INCLUDES = -I$(top_srcdir)

lib_LIBRARIES = libavoid.a

libavoid_a_SOURCES = connector.cpp\
			geometry.cpp\
			vertices.cpp\
			graph.cpp\
			makepath.cpp\
			router.cpp\
			polyutil.cpp\
			shape.cpp\
			cluster.cpp\
			timer.cpp\
			visibility.cpp\
			region.cpp\
			router.h\
			libavoid.h

libavoidincludedir = ${includedir}/libavoid
libavoidinclude_HEADERS = connector.h  geomtypes.h  makepath.h  router.h  timer.h debug.h      graph.h      polyutil.h  shape.h   vertices.h geometry.h   libavoid.h   region.h    static.h  visibility.h
