AC_INIT(libcola,0.1)
AC_CONFIG_SRCDIR(libcola/cola.h)
AM_INIT_AUTOMAKE
AC_PROG_RANLIB
#AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_INSTALL
#AC_DEFINE(TRACE_LOGGING)
AC_CHECK_LIB(cairomm-1.0,cairo_create)
AC_OUTPUT(Makefile libcola/Makefile libcola/tests/Makefile libvpsc/Makefile libvpsc/tests/Makefile)
